# glasshouse

./: .gitignore  API_INTEGRATION_GUIDE.txt  README.md  mock.json  package-lock.json  package.json  pyproject.toml
backend/: .env  main.py
backend/app/models/: fundraiser.py  transaction.py
backend/app/routers/: auth.py  fundraisers.py  transactions.py
backend/app/services/: akahu_client.py  fundraisers_db.py  transaction_db.py  users_db.py
backend/app/workers/: ai_analyzer.py  risk_detection.py  risk_notifier.py  run_risk_worker.py
backend/core/: config.py
backend/test/: fundraiser_test.py  test_auth.py  test_fundraiser.py  test_risk_demo.py  test_transactions.py
frontend/: index.html
frontend/src/: App.tsx
frontend/src/components/: Topbar.tsx
frontend/src/logo/: logo.tsx
frontend/src/pages/: AccountPage.tsx  AuthPage.tsx  CreateFundraiserPage.tsx  DonorViewPage.tsx  EditTrackerPage.tsx  ForgotPasswordPage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
hackathon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
