[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.0",
    "supabase>=2.29.0",
]

# Source - https://stackoverflow.com/a/72547402
# Posted by Warm_Duscher, modified by community. See post 'Timeline' for change history
# Retrieved 2026-05-02, License - CC BY-SA 4.0

[tool.setuptools]
py-modules = []
